# paribus-hospital-directory

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  exceptions.py  main.py  schemas.py  state.py
app/routes/: bulk.py
app/services/: bulk_processor.py  csv_loader.py  hospital_api.py
systemd/: paribus-bulk.service
tests/: test_api.py  test_bulk_service.py
